summative.moria.Moria.scala.error
Compilation error:
Moria:5: error: not found: value DIRECTION
   while(getDirection() != DIRECTION.EAST){
                           ^Moria:15: error: not found: value DIRECTION
     while(getDirection() != DIRECTION.WEST){
                             ^