summative.moria.Moria.scala.code
//isOverBaggle(), isCarryingBaggle(), pickupBaggle() or dropBaggle()

def move() = {
 	if(!isCarryingBaggle()){
   while(getDirection() != DIRECTION.EAST){
     right()
   }
   while(!isOverBaggle()){
     forward()
   }
   backward()
   dropBaggle()
   backward()
  } else {
   	while(getDirection() != DIRECTION.WEST){
      right()
    }
    while(!isOverBaggle()){
      forward()
    }
    pickupBaggle()
    backward()
  }
}

def leave() = {
  right();forward();left();forward()
}




def makeHisWayOut() = {
  left();left()
  while(!isFacingWall()){
    move()
  }
  leave()
}



makeHisWayOut()